--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,17 @@
 ﻿# Header-菜单
 menu:
   主页: /
-  技术笔记: https://zhousiwei.gitee.io/ibooks/
-  随笔: /tags/随笔/
+  随笔: /tags/essay
+  关于我: /about/index.html
 
 # subNav-子导航
 subNav:
-  - github: "#"
-  - github: "#" # (支持设置多个)
-  - gitee: "#" # 码云
-  - jianshu: "#" #简书
-  # - cnblog: "#"
-  # - blog: "#"
-  # - csdn: "#"
-  # - rss: "#"
-  # - zhihu: "#"
-  # - qq: "img/2434387555.jpg"
-  # - weixin: "img/weixin_.png"
-  # - weibo: "#"
+  - github: "https://github.com/linking123"
+  - csdn: "https://blog.csdn.net/jwl965278523"
+  #- twitter: "https://twitter.com/jinwenlin"
+  - linkedin: "https://www.linkedin.com/in/%E6%96%87%E6%9E%97-%E9%87%91-576734ba/"
   # - douban: "#"
-  # - segmentfault: "#"
-  # - bilibili: "#"
-  # - acfun: "#"
   # - mail: "mailto:zhousiwei0911@qq.com"
-  # - facebook: "#"
-  # - google: "#"
-  # - twitter: "#"
-  # - linkedin: "#"
 
 # 悬停预览图片效果
 hover_effect:
@@ -57,12 +42,12 @@ mathjax: false
 # Open link in a new tab | 是否在新窗口打开链接
 open_in_new:
   article: true  # 文章链接
-  menu: true   # 导航菜单
+  menu: false   # 导航菜单
   subNav: true  # 子菜单
 
 # 打赏
 # 打赏type设定：0-关闭打赏； 1-文章对应的md文件里有reward:true属性，才有打赏； 2-所有文章均有打赏
-reward_type: 2
+reward_type: 0
 # 打赏wording
 reward_wording: '谢谢你请我吃糖果'
 # 支付宝二维码图片地址，跟你设置头像的方式一样。比如：/assets/img/alipay.jpg
@@ -72,7 +57,7 @@ weixin: /img/weixin.png
 
 # 目录
 # 目录设定：0-不显示目录； 1-文章对应的md文件里有toc:true属性，才有目录； 2-所有文章均显示目录
-toc: 1
+toc: 2
 # 根据自己的习惯来设置，如果你的目录标题习惯有标号，置为true即可隐藏hexo重复的序号；否则置为false
 toc_hide_index: true
 # 目录为空时的提示
@@ -82,7 +67,7 @@ toc_empty_wording: '目录，不存在的…'
 top: true
 
 # Miscellaneous
-# 百度统计
+cnzz_web_id: 1256862048 ## umeng cnzz
 baidu_analytics: ''
 google_analytics: ''
 
@@ -157,7 +142,7 @@ clickLove:
 # GitHub Ribbons(https://github.blog/2008-12-19-github-ribbons/)
 github:
   # (关闭请设置为false)
-  url: https://github.com/JoeyBling/hexo-theme-yilia-plus
+  url: false
 
 # 页脚 Litten(此配置项已弃用)
 # 帮助我们让更多人可以更方便使用Hexo，请尽量不要修改此主题配置
@@ -171,10 +156,10 @@ baidu_push: false
 # 版权声明type设定：0-关闭版权声明； 1-文章对应的md文件里有copyright: true属性，才有版权声明； 2-所有文章均有版权声明
 copyright_type: 2
 # 版权声明自定义文本(关闭请设置为false)
-copyright_text: 
+copyright_text: 版权所有，转载请注明出处！
 
 # 网站成立年份(默认为 2018，若填入年份小于当前年份，则显示为 2018-2019 类似的格式)
-since: 2018
+since: 2015
 
 # Progress Bar | 页面加载进度条
 # Demo: http://github.hubspot.com/pace/docs/welcome/
@@ -183,7 +168,7 @@ since: 2018
 #       loading-bar|mac-osx|minimal
 # color: black|blue|green|orange|pink|purple|red|silver|white|yellow|
 progressBar:
-  enable: false
+  enable: true
   type: 'minimal'  # Keep Quotes | 保留引号避免出错(某些type会导致样式重叠排版错误)
   color: blue
 
@@ -261,26 +246,21 @@ slider:
 #  friends: false
 smart_menu:
   innerArchive: '所有文章'
-  friends: '友链'
-  aboutme: '关于我'
+  friends: '外链'
+  #aboutme: '关于我'
 
 # 友情链接
 friends:
-  技术笔记:  #网站名称
-    #网站地址
-    url: https://zhousiwei.gitee.io/ibooks/
-    #网站图片(可忽略不写)
-    img: https://zhousiwei.gitee.io/ibooks/favicon.ico
-    #网站简介(可忽略不写)
-    description: 记录工作和学习过程中的笔记：Java、前端开发、Hexo博客、聚合支付、Linux笔记、ElasticSearch、ELK日志分析
-  GitHub:
-    url: https://github.com/JoeyBling
-  码云:
-    url: https://gitee.com/zhousiwei
+  GitHub Trending:
+    url: https://github.com/trending
+  OpenAI ChatGPT:
+    url: https://chat.openai.com/chat
+  Gitee码云:
+    url: https://gitee.com/
   简书:
-    url: https://www.jianshu.com/u/02cbf31a043a
+    url: https://www.jianshu.com/
   CSDN:
-    url: https://blog.csdn.net/qq_30930805
+    url: https://blog.csdn.net/
 
 # 关于我
-aboutme: 主要涉及技术：<br>Java后端开发、聚合支付、<br>公众号开发、开源爱好者、Linux<br><br>联系QQ:2434387555<br><br>很惭愧<br><br>只做了一点微小的工作<br>谢谢大家
+aboutme: 主要涉及技术：<br>Java后端开发、<br>开源爱好者、<br>Linux<br>
